# 3d-renderer

./: CMakeLists.txt
src/: display.c  display.h  main.c
src/math/: vector.c  vector.h
